--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
   "tabWidth": 2,
+  "printWidth": 120,
   "semi": true,
   "arrowParens": "avoid",
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "printWidth": 120,
-  "endOfLine": "auto"
+  "jsxSingleQuote": false,
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "trailingComma": "all"  
 }
